修改集群测试 route iptable 图标

--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -1381,4 +1381,7 @@ table.table tr td textarea{
 #chkitem .testItemCon{
 	width:80%;
 }
-
+.clusterImg{
+	height: 18px;
+    margin-bottom: 3px;
+}
