--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -914,5 +914,11 @@ tfoot tr td{
 	border: 1px solid #ddd;
     border-radius: 4px;
 }
-
+#sortable .ibox .ibox-content .fa-questionCon,
+#sortable .ibox .ibox-content .questionInfoCon{
+	margin-left:12px;
+}
+input[name="isUserPrivateRegistry"]{
+	height: 29px;
+}
 
