--- a/src/main/resources/static/css/mod/bcm-menu.css
+++ b/src/main/resources/static/css/mod/bcm-menu.css
@@ -50,7 +50,7 @@ nav.navbar-default{
 .dropdown .dropdown-menu {
     min-width: 140px;
     border-radius: 6px !important;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 
 .arrow {
