修改admin和租户权限的创建密钥

--- a/src/main/resources/static/css/mod/secretKey.css
+++ b/src/main/resources/static/css/mod/secretKey.css
@@ -13,4 +13,9 @@
 #userNameCred, #passwordCred,#userNameCredDetail,#passwordCredDetail{
 	text-indent: 10px;
 }
-
+#proxy{
+	height:28px;
+}
+.adminLimitproxy{
+	display:none;
+}
